# peer-to-peer-filesharing

./: README.md  p2p-presentation.pptx
central-server/: CMakeLists.txt  includes.h  main.c
central-server/include/: parson.c
central-server/src/: jsonFunctions.c  jsonFunctions.h  list_functions.c  list_functions.h
doc/: C2S.json  C2S_request.json  S2C.json  clientExitCodes  file_metadata.json  ls_S2C.json  oom_error.json
p2p-client/: .gitignore  CMakeLists.txt  main.c
p2p-client/include/: list.c  list.h  parson.h
p2p-client/src/: TrashQueue.c  TrashQueue.h  client_thread.c  client_thread.h  includes.h  jsonFunctions.c  jsonFunctions.h  server_thread.c  server_thread.h  sha256sum.c  sha256sum.h
p2p-client/src/ClientTrheadSrc/: CreateMetaFile.c  CreateMetaFile.h  DownloadFile.c  DownloadFile.h  ListLocalFiles.c  ListLocalFiles.h
